新增对<include />的支持，不支持在标签内使用theme

--- a/Sample/src/main/res/layout/activity_main.xml
+++ b/Sample/src/main/res/layout/activity_main.xml
@@ -49,4 +49,15 @@
 
     </FrameLayout>
 
+    <include
+        android:id="@+id/layout_include_normal"
+        layout="@layout/layout_include_normal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <include
+        android:id="@+id/layout_include_merge"
+        layout="@layout/layout_include_merge" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
