支持多layout文件夹

--- a/Sample/app/src/main/res/layout/activity_main.xml
+++ b/Sample/app/src/main/res/layout/activity_main.xml
@@ -44,8 +44,8 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_launcher_foreground" />
+            android:layout_height="22dp"
+            android:src="@drawable/star" />
 
     </FrameLayout>
 
